--- a/mobile-service.properties
+++ b/mobile-service.properties
@@ -1,6 +1,6 @@
 pring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.url=jdbc:mysql://localhost:3306/training
+spring.datasource.url=jdbc:mysql://localhost:3306/product
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.database-platform=org.hibernate.dialect.MySQL5Dialect  
 spring.jpa.hibernate.show-sql=true
