--- a/mobile-service.properties
+++ b/mobile-service.properties
@@ -1,4 +1,4 @@
-pring.datasource.username=root
+spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.url=jdbc:mysql://localhost:3306/product
 spring.jpa.hibernate.ddl-auto=update
